commit segunda pre-entrega modificada

--- a/tips.html
+++ b/tips.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style2.css">
+    <link rel="stylesheet" href="./style2.css">
     <title>tips</title>
 </head>
 <body>
@@ -21,19 +21,19 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                        <a class="nav-link" href="../index/index2.html">Inicio</a>
+                        <a class="nav-link" href="./index2.html">Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="">Tips</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../recetas/recetas.html">Recetas</a>
+                    <a class="nav-link" href="./recetas.html">Recetas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../charlas/charlas.html">Charlas</a>
+                    <a class="nav-link" href="./charlas.html">Charlas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../contacto/contacto.html">Contacto</a>
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -47,13 +47,13 @@
       <div class="plato__texto">
             <h2>¿Cómo armar el plato ideal?</h2>
             <h4>En primer lugar vamos a dividir en plato en la mitad. Luego una de las mitades la dividimos otra vez a la mitad, quedando dos cuartas partes. Así:</h4>
-            <img src="platodiv.jpg" alt="plato">
+            <img src="./assets/platodiv.jpg" alt="plato">
                 <div>
                     <p>En la primer mitad vamos a poner verduras crudas o cocinas como: tomate, lechuga,remolacha, zanahoria, repollo, cebolla, brócoli, coliflor, etc. Las que más te gusten. En un cuarto ponemos las proteínas, éstas son las carnes rojas y blancas, las lentejas, los huevos, el queso, entre otros. Por último, en el cuarto de plato restante agregamos alimentos ricos en hidratos de carbono como fideos, arroz, etc.</p>
                     <div class="fotos__tips">
-                      <img  src="verduras.jpg" alt="verduras" >
-                      <img src="proteinas.jpg" alt="proteinas" > 
-                      <img src="hidratos.jpg" alt="hidratos" >
+                      <img  src="./assets/verduras.jpg" alt="verduras" >
+                      <img src="./assets/proteinas.jpg" alt="proteinas" > 
+                      <img src="./assets/hidratos.jpg" alt="hidratos" >
                         </div>
                 </div>
         </div>
@@ -62,7 +62,7 @@
     <section>
       <div class="ultima__section">
         <h3>Luego de seguir estos pasos... así queda terminado nuestro plato</h3>
-        <img src="2022-09-29.png" alt="">
+        <img src="./assets/tipsUltima.png" alt="">
       </div>
     </section>
 
@@ -79,10 +79,10 @@
         </h4>
     </div>
     <div class="redes">
-      <img src="../redes/icons8-facebook-rodeado-de-círculo-64.png" alt="facebook">
-      <img src="../redes/icons8-instagram-circle-64.png" alt="instagram">
-      <img src="../redes/icons8-whatsapp-64.png" alt="whatsapp">
-      <img src="../redes/icons8-tik-tok-64.png" alt="tiktok">
+      <img src="./assets/icons8-facebook-rodeado-de-círculo-64.png" alt="facebook">
+      <img src="./assets/icons8-instagram-circle-64.png" alt="instagram">
+      <img src="./assets/icons8-whatsapp-64.png" alt="whatsapp">
+      <img src="./assets/icons8-tik-tok-64.png" alt="tiktok">
 
   </div>
        
