--- a/charlas.html
+++ b/charlas.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style2.css">
+    <link rel="stylesheet" href="./style2.css">
     <title>Charlas</title>
 </head>
 <body>
@@ -21,19 +21,19 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                        <a class="nav-link" href="../index/index2.html">Inicio</a>
+                        <a class="nav-link" href="./index2.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../tips/tips.html">Tips</a>
+                    <a class="nav-link active" aria-current="page" href="./tips.html">Tips</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../recetas/recetas.html">Recetas</a>
+                    <a class="nav-link" href="./recetas.html">Recetas</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="">Charlas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../contacto/contacto.html">Contacto</a>
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -108,10 +108,10 @@
          </h4>
      </div>
      <div class="redes">
-        <img src="../redes/icons8-facebook-rodeado-de-círculo-64.png" alt="facebook">
-        <img src="../redes/icons8-instagram-circle-64.png" alt="instagram">
-        <img src="../redes/icons8-whatsapp-64.png" alt="whatsapp">
-        <img src="../redes/icons8-tik-tok-64.png" alt="tiktok">
+        <img src="./assets/icons8-facebook-rodeado-de-círculo-64.png" alt="facebook">
+        <img src="./assets/icons8-instagram-circle-64.png" alt="instagram">
+        <img src="./assets/icons8-whatsapp-64.png" alt="whatsapp">
+        <img src="./assets/icons8-tik-tok-64.png" alt="tiktok">
 
     </div>
         
